Add Isso in the app

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
+appdirs==1.4.3
 Django==1.10.3
 django-ckeditor==5.1.1
 django-comments-xtd==1.6.3
 django-contrib-comments==1.7.3
 django-registration-redux==1.4
 django-simple-captcha==0.5.3
-djangoajax==2.3.
+djangoajax==2.2.15
+html5lib==0.9999999
+isso==0.10.6
+itsdangerous==0.24
+misaka==1.0.2
+packaging==16.8
 Pillow==3.4.2
+pyparsing==2.2.0
 six==1.10.0
 Werkzeug==0.11.15
