--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,41 @@
+alabaster==0.7.10
 appdirs==1.4.3
+Babel==2.4.0
+certifi==2017.4.17
 cffi==1.10.0
-Django==1.10.3
-django-ckeditor==5.1.1
-django-comments-xtd==1.6.3
-django-contrib-comments==1.7.3
-django-registration-redux==1.4
-django-simple-captcha==0.5.3
+chardet==3.0.4
+Django==1.11.2
+django-ckeditor==5.2.2
+django-comments-xtd==2.0.2
+django-contrib-comments==1.8.0
+django-easy-pjax==1.3.0
+django-haystack==2.6.1
+django-registration-redux==1.6
+django-simple-captcha==0.5.5
 djangoajax==2.3.7
+djangorestframework==3.6.3
+docutils==0.13.1
 html5lib==0.9999999
+idna==2.5
+imagesize==0.7.1
 isso==0.10.6
 itsdangerous==0.24
-misaka==1.0.2
+Jinja2==2.9.6
+MarkupSafe==1.0
+misaka==2.1.0
+olefile==0.44
 packaging==16.8
-Pillow==3.4.2
+Pillow==4.1.1
 pycparser==2.17
+Pygments==2.2.0
 pyparsing==2.2.0
+pytz==2017.2
+requests==2.18.1
 six==1.10.0
-Werkzeug==0.11.15
+snowballstemmer==1.2.1
+Sphinx==1.6.2
+sphinxcontrib-websupport==1.0.1
+typing==3.6.1
+urllib3==1.21.1
+webencodings==0.5.1
+Werkzeug==0.12.2
