--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,14 @@ Babel==2.4.0
 certifi==2017.4.17
 cffi==1.10.0
 chardet==3.0.4
-Django==1.11.2
+Django==1.11.4
 django-ckeditor==5.2.2
 django-comments-xtd==2.0.2
 django-contrib-comments==1.8.0
 django-easy-pjax==1.3.0
 django-haystack==2.6.1
 django-registration-redux==1.6
+django-render-block==0.5
 django-simple-captcha==0.5.5
 djangoajax==2.3.7
 djangorestframework==3.6.3
